# swift-objc-value-type

./: .gitignore  BUILD.bazel  BazelSupport.md  MODULE.bazel  Package.resolved  Package.swift  README.md  bazel_fix.patch  swift_deps_index.json
.github/workflows/: ci.yaml
Integration/: .bazelrc  BUILD.bazel  MODULE.bazel  defs.bzl
Integration/ObjcConsumers/: MyObjc.m
Integration/RemodelSources/Common/: SingleSnapPlayerMediaAsset.adtValue
Integration/SwiftStructEnumSources/: Foo.swift
IntegrationTests/: MODULE.bazel
Sources/AntlrUtilities/: BUILD.bazel  ParseTree+Trivia.swift
Sources/ObjcGrammar/: BUILD.bazel  BasicGrammar.swift  CodeBlockGrammar.swift  DeclGrammar.swift  ObjcParser.swift  ObjectiveCLexer.g4  ObjectiveCLexer.interp  ObjectiveCLexer.swift  ObjectiveCParser.g4  ObjectiveCParser.interp  ObjectiveCParser.swift  ObjectiveCParser.tokens  ObjectiveCParserBaseListener.swift  ObjectiveCParserListener.swift  ObjectiveCPreprocessorParser.interp  ObjectiveCPreprocessorParser.swift  ObjectiveCPreprocessorParserBaseListener.swift  ObjectiveCPreprocessorParserListener.swift  README.md  TypeGrammar.swift  WhitespaceProductionOperator.swift
Sources/ObjcGrammarMacro/: ObjcGrammarMacro.swift
Sources/ObjcGrammarMacroInterface/: ObjcGrammarType.swift
Sources/ObjcSupport/: BUILD.bazel  EnumOptionConverter.swift  ObjcParser.swift  ObjcSyntax.swift  ProtocolConverter.swift  SwiftSyntaxExtensions.swift
Sources/ObjcSupport/Grammar/: BasicGrammar.swift  CodeBlockGrammar.swift  DeclGrammar.swift  TypeGrammar.swift  WhitespaceProductionOperator.swift
Sources/ObjcSyntax/: BUILD.bazel  ObjectiveCLexer.g4  ObjectiveCLexer.interp  ObjectiveCLexer.swift  ObjectiveCLexer.tokens  ObjectiveCParser.g4  ObjectiveCParser.interp  ObjectiveCParser.swift  ObjectiveCParser.tokens  ObjectiveCParserBaseListener.swift  ObjectiveCParserListener.swift  ObjectiveCPreprocessorLexer.swift  ObjectiveCPreprocessorParser.interp  ObjectiveCPreprocessorParser.swift  ObjectiveCPreprocessorParserBaseListener.swift  ObjectiveCPreprocessorParserListener.swift
Sources/ObjcTranslator/: BUILD.bazel  CollectorTokenSource.swift  EnumOptionConverter.swift  ObjcPreprocessor.swift  ObjcSyntax.swift  ObjcTranslator.swift  ObjectiveCParser+Utils.swift  ProtocolConverter.swift  TypeMigrations+Objc.swift
Sources/ObjcTranslator/Translation/: ObjcTranslator+ClassInterface.swift  ObjcTranslator+Declaration.swift  ObjcTranslator+EnumDeclaration.swift  ObjcTranslator+Error.swift  ObjcTranslator+Expression.swift  ObjcTranslator+Identifier.swift  ObjcTranslator+Interface.swift  ObjcTranslator+Method.swift  ObjcTranslator+Property.swift  ObjcTranslator+Protocol.swift  ObjcTranslator+Type.swift  ObjcTranslator+Typedef.swift  ObjcTranslator+VarDecl.swift
Sources/Remodel/: BUILD.bazel  RemodelSwiftFactory.swift  RemodelSyntax.swift  RemodelValueObjectParser.swift
Sources/SharedUtilities/: BUILD.bazel  ObjcSwiftUtils.swift  StringExtensions.swift  SwiftSyntaxExtensions.swift  TypeMappings.swift  TypeMigrations.swift
Sources/SwiftObjcValueType/: BUILD.bazel  BuilderFactory.swift  ExternalHashSettings.swift  SourcePreprocessor.swift  SwiftObjcValueTypeFactory+Bridging.swift  SwiftObjcValueTypeFactory+Builder.swift  SwiftObjcValueTypeFactory+Hash.swift  SwiftObjcValueTypeFactory+NSCoding.swift  SwiftObjcValueTypeFactory+NSCopying.swift  SwiftObjcValueTypeFactory+isEqual.swift  SwiftObjcValueTypeFactory.swift  SwiftSyntaxExtensions.swift  ValueObjectConfig.swift
Sources/SwiftObjcValueTypeExecutable/: BUILD.bazel  SwiftObjcValueTypeExecutable.swift
Sources/SwiftObjcValueTypeExecutable/CommandHelpers/: FileHandlingCommand.swift  PrefixStrippingArguments.swift
Sources/SwiftObjcValueTypeExecutable/Commands/: FileHandlingCommand.swift  GenerateValueTypeCommand.swift  MigrateObjcCommand.swift  MigrateRemodelCommand.swift  ParseObjcCommand.swift  ParseRemodelCommand.swift  TypeMapCommand.swift
Sources/SwiftObjcValueTypeExecutable/Utils/: FileHandlerOutputStream.swift  FileHandlingCommand.swift  SourceFileContentIterator.swift  StdinIterator.swift
Sources/SwiftObjcValueTypeMacro/: BUILD.bazel  SwiftObjcValueTypeMacro.swift  SwiftSyntaxExtensions+Macro.swift
Sources/SwiftObjcValueTypeMacroInterface/: BUILD.bazel  SwiftObjcValueType.swift
Sources/TestingSupport/: AssertBuildResult.swift  BUILD.bazel
Tests/ObjcGrammarTests/: BUILD.bazel  ObjcParserTests.swift
Tests/ObjcSupportTests/: BUILD.bazel  EnumOptionConverterTests.swift  ObjcParserTests.swift
Tests/ObjcTranslatorTests/: BUILD.bazel  EnumOptionConverterTests.swift  ObjcPreprocessorTests.swift  ObjcTranslatorTests.swift
Tests/RemodelTests/: BUILD.bazel  RemodelSwiftFactoryTests.swift  RemodelValueObjectParserTests.swift
Tests/SwiftObjcValueTypeMacroTests/: BUILD.bazel  SwiftObjcValueTypeMacroTests.swift
Tests/SwiftObjcValueTypeTests/: BUILD.bazel  SourcePreprocessorTests.swift  SwiftObjcValueTypeTests.swift
