module(
    name = "swift_objc_value_type"
)

bazel_dep(name = "rules_swift_package_manager", version = "0.30.0")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_swift", version = "1.18.0")
bazel_dep(name = "rules_apple", version = "3.5.1")
bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")

# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_file(
    deps_index = "//:swift_deps_index.json",
)
use_repo(
    swift_deps,
    "swiftpkg_pathkit",
    "swiftpkg_swift_argument_parser",
    "swiftpkg_swift_custom_dump",
    "swiftpkg_swift_syntax",
    "swiftpkg_swiftbuildermacro",
)
# swift_deps END
