load(":defs.bzl", "swift_objc_wrapper_library")

objc_library(
    name = "ObjcConsumers",
    srcs = ["ObjcConsumers/MyObjc.m"],
    deps = [":SwiftStructEnumSources"],
    copts = ["-I$(GENDIR)/"],
)

swift_objc_wrapper_library(
    name = "SwiftStructEnumSources",
    srcs = glob(
        ["SwiftStructEnumSources/**/*.swift"],
    ),
    generates_header = True,
)
