load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "AntlrUtilities",
    srcs = ["ParseTree+Trivia.swift"],
    module_name = "AntlrUtilities",
    visibility = ["//visibility:public"],
    deps = [
        "@swiftpkg_antlr4//:Antlr4Static",
        "@swiftpkg_swift_collections//:OrderedCollections",
    ],
)
