load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ObjcSyntax",
    srcs = [
        "ObjectiveCLexer.swift",
        "ObjectiveCParser.swift",
        "ObjectiveCParserBaseListener.swift",
        "ObjectiveCParserListener.swift",
        "ObjectiveCPreprocessorParser.swift",
        "ObjectiveCPreprocessorParserBaseListener.swift",
        "ObjectiveCPreprocessorParserListener.swift",
    ],
    module_name = "ObjcSyntax",
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_antlr4//:Antlr4Static"],
)
