load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ObjcTranslator",
    srcs = [
        "CollectorTokenSource.swift",
        "EnumOptionConverter.swift",
        "ObjcSyntax.swift",
        "ObjcTranslator.swift",
        "ProtocolConverter.swift",
        "SwiftSyntaxExtensions.swift",
        "Translation/ObjcTranslator+EnumDeclaration.swift",
    ],
    module_name = "ObjcTranslator",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/ObjcGrammar",
        "//Sources/SharedUtilities",
        "@swiftpkg_antlr4//:Antlr4Static",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder",
    ],
)
