load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "ObjcTranslator",
    srcs = [
        "CollectorTokenSource.swift",
        "EnumOptionConverter.swift",
        "ObjcSyntax.swift",
        "ObjcTranslator.swift",
        "ObjectiveCParser+Utils.swift",
        "ProtocolConverter.swift",
        "SwiftSyntaxExtensions.swift",
        "Translation/ObjcTranslator+Declaration.swift",
        "Translation/ObjcTranslator+EnumDeclaration.swift",
        "Translation/ObjcTranslator+Error.swift",
        "Translation/ObjcTranslator+Property.swift",
        "Translation/ObjcTranslator+Protocol.swift",
        "Translation/ObjcTranslator+Type.swift",
        "Translation/ObjcTranslator+Typedef.swift",
    ],
    module_name = "ObjcTranslator",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/ObjcSyntax",
        "//Sources/SharedUtilities",
        "@swiftpkg_antlr4//:Antlr4Static",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder",
    ],
)
