load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Remodel",
    srcs = [
        "RemodelSwiftFactory.swift",
        "RemodelSyntax.swift",
        "RemodelValueObjectParser.swift",
    ],
    module_name = "Remodel",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/SharedUtilities",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder",
    ],
)
