load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "SharedUtilities",
    srcs = [
        "ObjcSwiftUtils.swift",
        "StringExtensions.swift",
        "SwiftSyntaxExtensions.swift",
    ],
    module_name = "SharedUtilities",
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntaxBuilder"],
)
