load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "SharedUtilities",
    srcs = [
        "ObjcSwiftUtils.swift",
        "StringExtensions.swift",
        "SwiftSyntaxExtensions.swift",
        "TypeMappings.swift",
    ],
    module_name = "SharedUtilities",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/ObjcSyntax",
        "@swiftpkg_antlr4//:Antlr4Static",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder",
    ],
)
