load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "SwiftObjcValueType",
    srcs = [
        "SourcePreprocessor.swift",
        "SwiftObjcValueTypeFactory.swift",
        "SwiftObjcValueTypeFactory+Builder.swift",
        "SwiftObjcValueTypeFactory+NSCoding.swift",
        "SwiftSyntaxExtensions.swift",
    ],
    module_name = "SwiftObjcValueType",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/SharedUtilities",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder",
    ],
)
