load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "SwiftObjcValueType",
    srcs = [
        "ExternalHashSettings.swift",
        "SourcePreprocessor.swift",
        "SwiftObjcValueTypeFactory.swift",
        "SwiftObjcValueTypeFactory+Builder.swift",
        "SwiftObjcValueTypeFactory+Hash.swift",
        "SwiftObjcValueTypeFactory+NSCoding.swift",
        "SwiftObjcValueTypeFactory+NSCopying.swift",
        "SwiftObjcValueTypeFactory+isEqual.swift",
        "SwiftSyntaxExtensions.swift",
    ],
    module_name = "SwiftObjcValueType",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/SharedUtilities",
        "@swiftpkg_swift_syntax//:SwiftSyntaxBuilder",
    ],
)
