load("@rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "SwiftObjcValueTypeMacro",
    srcs = ["SwiftObjcValueTypeMacro.swift"],
    module_name = "SwiftObjcValueTypeMacro",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/SwiftObjcValueType",
        "@swiftpkg_swift_syntax//:SwiftCompilerPlugin",
    ],
)
