load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "TestingSupport",
    srcs = ["AssertBuildResult.swift"],
    module_name = "TestingSupport",
    testonly = True,
    visibility = ["//visibility:public"],
    deps = ["@swiftpkg_swift_syntax//:SwiftSyntaxMacrosTestSupport"],
)
