load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "ObjcGrammarTests",
    srcs = ["ObjcParserTests.swift"],
    module_name = "ObjcGrammarTests",
    deps = [
        "//Sources/ObjcGrammar",
        "//Sources/TestingSupport",
        "@swiftpkg_swift_custom_dump//:CustomDump",
    ],
)
