load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "ObjcSupportTests",
    srcs = ["EnumOptionConverterTests.swift"],
    module_name = "ObjcSupportTests",
    deps = [
        "//Sources/ObjcSupport",
        "//Sources/TestingSupport",
        "@swiftpkg_swift_custom_dump//:CustomDump",
    ],
)
