load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "RemodelTests",
    srcs = [
        "RemodelSwiftFactoryTests.swift",
        "RemodelValueObjectParserTests.swift",
    ],
    module_name = "RemodelTests",
    deps = [
        "//Sources/Remodel",
        "//Sources/TestingSupport",
        "@swiftpkg_swift_custom_dump//:CustomDump",
    ],
)
