load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "SwiftObjcValueTypeMacroTests",
    srcs = ["SwiftObjcValueTypeMacroTests.swift"],
    module_name = "SwiftObjcValueTypeMacroTests",
    deps = [
        "//Sources/SwiftObjcValueType",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacrosTestSupport",
    ],
)
