load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "SwiftObjcValueTypeMacroTests",
    srcs = ["SwiftObjcValueTypeMacroTests.swift"],
    module_name = "SwiftObjcValueTypeMacroTests",
    deps = [
        "//Sources/SwiftObjcValueType",
        "//Sources/SwiftObjcValueTypeMacro",
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacrosTestSupport",
    ],
)
