load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "SwiftObjcValueTypeTests",
    srcs = [
        "SourcePreprocessorTests.swift",
        "SwiftObjcValueTypeTests.swift",
    ],
    module_name = "SwiftObjcValueTypeTests",
    deps = [
        "//Sources/SwiftObjcValueType",
        "//Sources/TestingSupport",
        "@swiftpkg_swift_syntax//:SwiftSyntax",
    ],
)
